<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_color_body"
    tools:context=".fragment.LogInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/theme_color"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/signInBack"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    app:itemIconTint="@color/theme_color"
                    app:itemTextColor="@color/theme_color"
                    app:srcCompat="@drawable/baseline_back_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/sign_in"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </com.google.android.material.appbar.MaterialToolbar>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/watch_paradise_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/login_title"
            android:textAlignment="center"
            android:textColor="@color/theme_color"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/txtLogInEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/custom_search_bar"
            android:drawableEnd="@drawable/baseline_email_24"
            android:fontFamily="@font/quicksand"
            android:hint="example@gmail.com"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/txtLogInPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/custom_search_bar"
            android:drawableEnd="@drawable/baseline_lock_24"
            android:fontFamily="@font/quicksand"
            android:hint="**********"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/quicksand_bold"
            android:padding="10dp"
            android:text="@string/sign_in"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/theme_color" />

    </LinearLayout>

</FrameLayout>